# AoC-2024

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  readme.md
01/: a.py  a.rs  b.rs  test.py
02/: CMakeLists.txt  a.cpp  b.py
04/: b.py
05/: a.c  b.py
06/: a.c
07/: CMakeLists.txt  a.c  b.c
08/: a.py
09/: a.py  b.py
1/: b.py
10/: a.py  b.py
11/: CMakeLists.txt  a.c  b.c
12/: a.py
17/: a.py  b.py
19/: a.py  b.py  input.txt
2/: a.py
20/: a.py
21/: CMakeLists.txt  a.c
25/: a.py
3/: a.py  b.py
4/: a.py
5/: CMakeLists.txt  b.c
6/: CMakeLists.txt  a.c  b.py
7/: CMakeLists.txt  a.c  b.c
